cabal-version: 3.0
name:          topless
version:       0.1.0.0
synopsis:      Convertible types
homepage:      https://github.com/pnotequalnp/topless
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2021
category:      Data

library
  exposed-modules:  Topless
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   src
  default-language: Haskell2010
